syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.testgrpc";
option java_outer_classname = "TestGRPCProto";

package grpc;

service Fixture {
  rpc Ping (FixtureRequest) returns (FixtureReply) {}
  rpc StreamPing(stream FixtureRequest) returns (stream FixtureReply) {}
}

// The request message containing the user's name.
message FixtureRequest {
  string name = 1;
}

// The response message containing the greetings
message FixtureReply {
  string message = 1;
}
